Add Tomasz Włostowski MSc thesis reference

--- a/initial_research/bibliography.bib
+++ b/initial_research/bibliography.bib
@@ -213,3 +213,12 @@
   journal = {CERN Documents},
   howpublished = {\href{https://white-rabbit.web.cern.ch/documents/WhiteRabbitSpec.v2.0.pdf}{white-rabbit.web.cern.ch/documents/WhiteRabbitSpec.v2.0.pdf}}
 }
+
+@misc{Tomasz-MSc,
+  author = {Włostowski, Tomasz},
+  title = {{Precise time and frequency transfer in a White Rabbit network}},
+  year = {2011},
+  publisher = {Warsaw University of Technology},
+  journal = {Master of Science thesis},
+  howpublished = {\href{https://white-rabbit.web.cern.ch/documents/Precise_time_and_frequency_transfer_in_a_White_Rabbit_network.pdf}{white-rabbit.web.cern.ch/documents/Precise\_time\_and\_frequency\_transfer \_in\_a\_White\_Rabbit\_network.pdf}}
+}
