Add Rathera DOC to bibliography

--- a/initial_research/bibliography.bib
+++ b/initial_research/bibliography.bib
@@ -222,3 +222,12 @@
   journal = {Master of Science thesis},
   howpublished = {\href{https://white-rabbit.web.cern.ch/documents/Precise_time_and_frequency_transfer_in_a_White_Rabbit_network.pdf}{white-rabbit.web.cern.ch/documents/Precise\_time\_and\_frequency\_transfer \_in\_a\_White\_Rabbit\_network.pdf}}
 }
+
+@misc{Rathera,
+  author = {Scarbro, Alex},
+  title = {{Sub-nanosecond Network Synchronisation - An Introduction to White Rabbit}},
+  year = {2022},
+  publisher = {Rtahera},
+  journal = {Web},
+  howpublished = {\href{https://www.armms.org/media/uploads/sub-nanosecond-network-synchronisation---an-introd.pdf}{armms.org/media/uploads/sub-nanosecond-network-synchronisation---an-introd.pdf}}
+}
