update asic scheme info

--- a/initial_research/sections/asic.tex
+++ b/initial_research/sections/asic.tex
@@ -2,7 +2,10 @@
 \section{ASIC}
 \label{asic}
 
-The goal of this thesis is to perform this ASIC:
+\st{The goal of this thesis is to perform this ASIC:}
+
+\noindent The goal of the thesis is to perform an ASIC but this scheme doesn't show the real design at all.
+Actually, the layout is currently being designed and when we have a valid result we will update the correct scheme.
 
 \begin{figure}[H]
     \centering
