--- a/initial_research/sections/asic.tex
+++ b/initial_research/sections/asic.tex
@@ -4,12 +4,12 @@
 
 \st{The goal of this thesis is to perform this ASIC:}
 
-\noindent The goal of the thesis is to perform an ASIC but this scheme doesn't show the real design at all.
-Actually, the layout is currently being designed and when we have a valid result we will update the correct scheme.
+\noindent The goal of the thesis is to perform an ASIC but this diagram doesn't show the real design at all.
+Actually, the layout is currently being designed and when we have a valid result we will update the correct diagram.
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=14cm]{figures/ASIC-Scheme.pdf}
+    \includegraphics[width=14cm]{figures/ASIC-Diagram.pdf}
     \caption{ASIC to be develop.}
     \label{fig:ASIC}
 \end{figure}
